# Wattpad-Py

./: .gitignore  .readthedocs.yaml  404.html  LICENSE  README.md  docs_requirements.txt  index.html  mkdocs.yml  objects.inv  requirements.txt  setup.cfg  sitemap.xml
docs/: memory-efficiency.ipynb  quickstart.ipynb  sync-and-async.ipynb
docs/reference/: model_types.md  models.md  story.md  user.md  utils.md
memory-efficiency/: index.html
quickstart/: index.html
reference/model_types/: index.html
reference/models/: index.html
reference/story/: index.html
reference/user/: index.html
reference/utils/: index.html
src/: classes.py  model_types.py  models.py  story.py  user.py  utils.py  wattpad_py.py
src/wattpad/: __init__.py  model_types.py  models.py  utils.py  wattpad.py
src/wattpad.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sync-and-async/: index.html
