[metadata]
name = wattpad
version = 1.0.0
description = High-performance Wattpad SDK. Supports Caching and Async. Memory-Efficient.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TheOnlyWayUp/Wattpad-Py
author = TheOnlyWayUp
author_email = "TheOnlyWayUp" <thedarkdraconian@gmail.com>
license_files = LICENSE
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed
    

[options]
packages = find:
python_requires = >=3.8
package_dir = =src
install_requires =
    aiohttp==3.9.1
    aiohttp-client-cache==0.10.0
    aiosignal==1.3.1
    annotated-types==0.6.0
    async-timeout==4.0.3
    attrs==23.2.0
    frozenlist==1.4.1
    idna==3.6
    itsdangerous==2.1.2
    multidict==6.0.4
    pydantic==2.5.3
    pydantic_core==2.14.6
    six==1.16.0
    typing_extensions==4.9.0
    url-normalize==1.4.3
    yarl==1.9.4


[options.packages.find]
where = ./src

[options.package_data]
wattpad =
	py.typed
